--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:search-bar": "node dist/search-bar/server/server.mjs"
-    
   },
   "private": true,
   "dependencies": {
@@ -22,8 +21,11 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.6",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
+    "json-serve": "^0.1.0",
+    "json-server": "^1.0.0-beta.0",
     "persianjs": "^0.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
